--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,10 @@
 .header {
-    padding: 15px;
-
+    padding: 7px;
     right: 0px;
+    left: 0px;
     z-index: 666;
-    background: rgb(54, 54, 73);
+    background: rgb(0, 0, 0);
+    position: fixed;
 }
 
 .menu-nav_item{
@@ -20,15 +21,17 @@
 
 a {
         text-decoration: none;
-        color: rgb(99, 99, 99);
+        color: rgb(0, 0, 0);
 }
 a:hover {
         text-decoration: none;
         color: whitesmoke;
 }
-@media screen and (max-width: 1140px) {
-        .header {
-            padding: 30px 0;
-        }
-        
-    }
+li {
+        color: rgb(0, 0, 0);
+}
+li:hover {
+        text-decoration: none;
+        color: whitesmoke;
+}
+
