--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,11 @@
 .header {
-    padding: 7px;
+    padding: 0;
     right: 0px;
     left: 0px;
     z-index: 666;
     background: rgb(0, 0, 0);
     position: fixed;
+    opacity: 0.8;
 }
 
 .menu-nav_item{
@@ -21,7 +22,7 @@
 
 a {
         text-decoration: none;
-        color: rgb(0, 0, 0);
+        color: rgb(230, 230, 230);
 }
 a:hover {
         text-decoration: none;
